visual overhaul, restylized nav bar

--- a/index.html
+++ b/index.html
@@ -2,3 +2,11 @@
 layout: page
 title: Home
 ---
+<div class="half">
+	<h2>About Me</h2>
+
+
+	<p>I am a senior at UCLA graduating with a B.S. in Mathematics of Computation. I am a passionate learner with interests in machine learning, statistical learning theory, deep learning, physics, and piano. As a research assistant at UCLA's Center for Vision, Cognition, Learning, and Autonomy, I have been investigating the planning problem in an autonomous driving scenario in an effort to guide more efficient exploration in intelligent agents and to gain potential insights into task decomposition and hierarchical learning.</p>
+
+	<p>Currently seeking employment in Chicago, IL.</p>
+</div>
