updated notes section and personalized header for each page

--- a/notes.html
+++ b/notes.html
@@ -2,8 +2,43 @@
 layout: page
 title: Notes
 ---
-<div class="half">
-    <h2>Coming Soon™</h2>
+<div class="notes">
+		<div class="text-center">
+			<h1>Notes</h1>
+			<p>Here are a collection of my notes from courses at UCLA, as well as from a few various textbooks that I have read for research.</p>
+		</div>
+	<div class="color1">
+		<div class="notespage">
+		  	<div class="row">
+		  		<!-- category of notes -->
+		  		<div class="category">
+			  		<div class="image">
+			  			 <img src="./assets/books.png" alt="Error loading graphic!">
+			  			 <div class="imagecaption">
+				  			<h2>Textbooks</h2>
+				  		</div>	 
+			  		</div>
+		  		</div>
 
-    <p>In the future I will post my notes from selected coursework.</p>
+		  		<!--notes -->
+		  		<div class="noteitem">
+		  			<h3 style="text-align:center;"><i>PRML</i></h3> 
+		  			by Christopher Bishop
+		  			<img src="../assets/prml.jpg" width="148px" height="200px">
+		  			<a href="https://drive.google.com/file/d/1c--PMjevwTpgoipoUBOq02R61lenusHG/view?usp=sharing">
+		  				<img src="../assets/Google-Drive-icon.png" style="padding:1em 0;width:60px;height:60px;">
+		  			</a>
+		  		</div>
+		  		<!--notes -->
+		  		<div class="noteitem">
+		  			<h3 style="text-align:center;"><i>Deep Learning</i></h3>
+		  			by Ian Goodfellow, et. al.
+		  			<img src="../assets/deeplearning.png" width="148px" height="200px">
+		  			<a href="https://drive.google.com/file/d/12WdwmMp_5PJNM9QiWZfpZgIUWUkV_37R/view?usp=sharing">
+		  				<img src="../assets/Google-Drive-icon.png" style="padding:1em 0;width:60px;height:60px;">
+		  			</a>
+		  		</div>
+		  	</div>
+	  	</div>
+  	</div>
 </div>
